[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/TinyDungeon/tile_0084.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/SpellLocator.tscn" type="PackedScene" id=3]
[ext_resource path="res://FSM/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Player/Idle.gd" type="Script" id=5]
[ext_resource path="res://Player/Move.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Skin" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MoveRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )

[node name="EastSpellLocator" parent="." instance=ExtResource( 3 )]

[node name="TweenMove" type="Tween" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
